--- a/css/styles.css
+++ b/css/styles.css
@@ -142,11 +142,25 @@ a {
 
 .list--tick .list__item {
   padding-left: 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
   .list--tick .list__item {
-    padding-left: 2rem;
+    padding-left: 1rem;
   }
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
+
+.icon-container {
+  background: #f3f9fa;
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
