--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,11 @@ a {
 
 /* Icons */
 
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
 .icon--primary {
   fill: var(--color-primary);
 }
@@ -361,4 +366,22 @@ a {
   .plan__description {
     font-size: 1.7rem;
   }
+}
+
+/* Media Objects */
+
+.media {
+  display: flex;
+}
+
+.media__tittle {
+  margin-top: 0;
+}
+
+.media__body {
+  margin: 0 2rem;
+}
+
+.media__image {
+  margin-top: 1rem;
 }
