--- a/Components/Card.html
+++ b/Components/Card.html
@@ -1,4 +1,4 @@
-<div class="plan plan--popular">
+<div style="width: 30%; padding: 4rem">
   <div class="card card--secondary">
     <header class="card__header">
       <h3 class="plan__name">Entry</h3>
