--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,7 @@ a {
   color: white;
 }
 
-.btn--streched {
+.btn--stretched {
   padding-left: 6rem;
   padding-right: 6rem;
 }
@@ -588,7 +588,7 @@ a {
 }
 
 .block__heading {
-  margin-top: 0;
+  margin-top: 1rem;
 }
 
 .block--dark {
@@ -679,6 +679,7 @@ a {
 
 /* Hero */
 .hero {
+  padding-top: 5rem;
   clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 .hero__tagline {
