--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,10 @@
 }
 
 /* Typography */
+::selection {
+  background: var(--color-primary);
+  color: white;
+}
 
 html {
   font-size: 62.5%;
@@ -46,7 +50,7 @@ h2 {
 
 h3 {
   font-size: 3rem;
-  margin-bottom: 1rem;
+  font-weight: 500;
 }
 
 p {
@@ -138,7 +142,6 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
-  color: var(--color-headings);
 }
 
 .list--inline .list__item {
@@ -149,6 +152,7 @@ a {
 .list--tick {
   list-style-image: url(/images/tick.svg);
   padding-left: 3rem;
+  color: var(--color-headings);
 }
 
 .list--tick .list__item {
@@ -425,6 +429,7 @@ a {
 
 .media__body {
   margin: 0 2rem;
+  margin-bottom: 4rem;
 }
 
 .media__image {
@@ -605,7 +610,7 @@ a {
 
 .block {
   --padding-vertical: 6rem;
-  padding-right: var(--padding-vertical) 2rem;
+  padding: var(--padding-vertical);
 }
 
 .block__header {
@@ -621,17 +626,19 @@ a {
   color: #7b858b;
 }
 
-.block--dark .block__heading {
+.block--dark h1,
+.block--dark h2,
+.block--dark h3 {
   color: white;
 }
 
 .block--skewed-right {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
 .container {
@@ -703,10 +710,7 @@ a {
 }
 
 /* Hero */
-.hero {
-  padding-top: 5rem;
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
+
 .hero__tagline {
   font-size: 2rem;
   color: #b9c3cf;
@@ -787,4 +791,25 @@ a {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
   }
+}
+
+/* Showcase Block */
+
+.block-showcase__image > img {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .block-showcase .grid {
+    grid-template-columns: 50% 50%;
+  }
+
+  .block-showcase__image {
+    justify-self: end;
+  }
+}
+
+.block-showcase__image > img {
+  width: auto;
+  max-width: 700px;
 }
