--- a/css/styles.css
+++ b/css/styles.css
@@ -506,7 +506,7 @@ a {
 /* Testimonials */
 
 .testimonial {
-  padding: 3rem;
+  padding: 3.5rem;
 }
 
 .testimonial__image {
@@ -615,6 +615,7 @@ a {
 
 .block__header {
   text-align: center;
+  margin-bottom: 4rem;
 }
 
 .block__heading {
